# ladybug128v3_opt8

./: CMakeLists.txt  KAT_128_128.txt  Makefile  README.md  aead.c  aead.h  aegis128_test.json  api.h  cJSON.h  config.h  confusion_layer.c  confusion_layer.h  constants.h  crypto_aead.h  custom_test_vector.json  custom_test_vector_backup.json  diffusion_layer.c  diffusion_layer.h  encrypt.c  encrypt.h  forceinline.h  ladybug.h  ladybug128v2  ladybug128v3  main.c  new_test_vector.json  permutations.c  permutations.h  printstate.c  printstate.h  round.c  round.h  test_vector.json  test_vector_backup.json  utils.c  utils.h  word.h
